force-app/main/default/objects/GPT_Configurations__c/GPT_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>GPT Configurations like API Key, model to be used, etc</description>
    <label>GPT Configurations</label>
</CustomObject>