force-app/main/default/objects/GPT_Configurations__c/fields/Assistant_AI_Base_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Assistant_AI_Base_End_Point__c</fullName>
    <description>Specify Assistant AI Base End Point</description>
    <inlineHelpText>Specify Assistant AI Base End Point</inlineHelpText>
    <label>Assistant AI Base End Point</label>
    <type>Url</type>
</CustomField>