force-app/main/default/objects/GPT_Configurations__c/fields/Chat_Completions_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Chat_Completions_End_Point__c</fullName>
    <description>End Point for Chat Completions requests</description>
    <inlineHelpText>End Point for Chat Completions requests</inlineHelpText>
    <label>Chat Completions End Point</label>
    <required>true</required>
    <type>Url</type>
</CustomField>