force-app/main/default/objects/GPT_Configurations__c/fields/GPT_API_Key__c.field-meta.xml
<CustomField>
    <fullName>GPT_API_Key__c</fullName>
    <label>GPT API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>