force-app/main/default/objects/GPT_Configurations__c/fields/GPT_Model__c.field-meta.xml
<CustomField>
    <fullName>GPT_Model__c</fullName>
    <description>Model name to be used for chat completion</description>
    <inlineHelpText>Model name to be used for chat completion</inlineHelpText>
    <label>GPT Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>