force-app/main/default/objects/GPT_Configurations__c/fields/OpenAI_Organization__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Organization__c</fullName>
    <description>Specify OpenAI Organization Id</description>
    <inlineHelpText>Specify OpenAI Organization Id</inlineHelpText>
    <label>OpenAI Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>