force-app/main/default/objects/GPT_Configurations__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <length>3</length>
    <type>Text</type>
</CustomField>